Prevent overflow with hyphenation within abstracts #3642

--- a/src/read-side/html-pages/paper-activity-page/render-as-html/_article-abstract.scss
+++ b/src/read-side/html-pages/paper-activity-page/render-as-html/_article-abstract.scss
@@ -7,4 +7,8 @@
     padding-right: 0;
     padding-left: 0;
   }
+
+  p {
+    hyphens: auto;
+  }
 }
